@@ -1,3 +1,10 @@
+Mon Oct 10 00:55:46 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* code.c (codePosition): Add workaround.
+	* eval.c (evalBinop): Enhance Op_ne for Symbol comparison.
+	* regression/tests_pass/operator_relational.s: Enhance with Symbol
+	equivalence tests.
+
 Sat Oct  8 19:09:57 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* area.c (c_align): Add support for ABS area.  Negative offset values
